<resources>
    <!-- Название программы -->
    <string name="app_name">Canashev_Project3</string>

    <!-- Текстовые константы -->
    <string name="Мужчина">Мужчина</string>
    <string name="Женщина">Женщина</string>
    <string name="Анкета">Анкета</string>
    <string name="Введите_ФИО">Введите ваши Фамилию и Имя</string>
    <string name="Введите_Возраст">Введите ваш возраст</string>
    <string name="Укажите_пол">Укажите пол:</string>
    <string name="мужчина">мужчина</string>
    <string name="женщина">женщина</string>
    <string name="Выберите_образование">Выберите образование:</string>
    <string name="Ваша_страна">Ваша страна:</string>
    <string name="Далее">Далее</string>
    <string name="высшее">высшее</string>
    <string name="среднее">среднее</string>
    <string name="начальное">начальное</string>
    <string name="Сводные_данные">Сводные данные:</string>
    <string name="Назад">Назад</string>
    <string name="Выход">Выход</string>
    <string name="Вы">Вы:</string>
    <string name="Возраст">Возраст:</string>
    <string name="Пол">Пол:</string>
    <string name="Образование">Образование:</string>
    <string name="Страна">Страна:</string>
    <string name="Приветствие">Здравствуйте, рады приветствовать в нашем приложении для знакомств</string>

    <!-- Массив строк -->
    <string-array name="country_arrays">
        <item>Казахстан</item>
        <item>Россия</item>
        <item>Америка</item>
        <item>Германия</item>
        <item>Франция</item>
    </string-array>

</resources>
